--- a/app/globals.css
+++ b/app/globals.css
@@ -72,15 +72,57 @@
 /*  */
 /*  */
 /*  */
+/* Add this to your CSS */
+.image-enter {
+  opacity: 0;
+}
+.image-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 1500ms, transform 1500ms;
+}
+.image-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+.image-exit-active {
+  opacity: 0;
+
+  transition: opacity 1500ms, transform 1500ms;
+}
+
 /*  */
 /*  */
-/*  */
-/*  */
+.scrollToTopButton {
+  position: fixed;
+  right: 20px;
+  bottom: -20px;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease, bottom 0.7s ease;
+  border-radius: 50%;
+  background: rgba(240, 240, 240, 0.8);
+  padding: 10px;
+  cursor: pointer;
+  outline: none;
+}
+
+.scrollToTopButton.visible {
+  opacity: 1;
+  visibility: visible;
+  bottom: 20px;
+}
+
+.scrollToTopButton .fa-chevron-up {
+  color: #00abd7; /* Specific color for the arrow */
+}
+
 /*  */
 
 /* miniaturki */
 .thumbnail-link img {
-  transition: transform 0.3s ease;
+  transition: transform 0.6s ease;
 }
 
 .thumbnail-link img:hover {
