--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:focus {
+  outline: none;
+}
+
 /* wszystko do karuzeli */
 .carousel-container {
   position: relative;
@@ -192,6 +196,14 @@
     display: none;
   }
 }
+
+@media (max-width: 640px) {
+  .responsive-padding {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
