--- a/app/globals.css
+++ b/app/globals.css
@@ -191,9 +191,27 @@
   transform: scale(1.15);
 }
 
+
 @media (max-width: 767px) {
-  .top-bar {
+  .top-bar .contact-links a:not(.map-link), .top-bar .social-links {
     display: none;
+  }
+
+  .top-bar .map-link {
+    text-align: right; 
+  }
+}
+.top-bar .map-link-mobile {
+  display: none;
+}
+@media (max-width: 767px) {
+  .top-bar .contact-links a:not(.map-link), .top-bar .social-links {
+    display: none;
+  }
+
+  .top-bar .map-link-mobile {
+    display:flex;
+    text-align: right; 
   }
 }
 
@@ -206,6 +224,27 @@
 .menu {
   scroll-behavior: smooth;
 }
+
+.section-container {
+  max-width: 900px;
+  width: 95%;
+  margin: 20px auto;
+  padding: 1.5rem;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border: 0.1px solid #e0e0e0;
+}
+
+@keyframes fadeOutScale {
+    from {
+      opacity: 1;
+     transform: scale(1);
+     }
+     to {
+      opacity: 0;
+      transform: scale(2.5);
+    }
+   }
 
 @layer base {
   :root {
